# Market-data-handle

./: README.md
market_data_handler/: CMakeLists.txt
market_data_handler/benchmarks/: bench_cache.cpp  bench_parser.cpp
market_data_handler/docs/: DESIGN.md  GBM.md  NETWORK.md  PERFORMANCE.md  QUESTIONS.md
market_data_handler/include/: cache.h  latency_tracker.h  memory_pool.h  protocol.h
market_data_handler/scripts/: benchmark_latency.sh  build.sh  run_client.sh  run_demo.sh  run_server.sh
market_data_handler/src/client/: feed_handler.cpp  parser.cpp  parser.h  socket.cpp  socket.h  visualizer.cpp  visualizer.h
market_data_handler/src/common/: cache.cpp  latency_tracker.cpp  memory_pool.cpp  protocol.h
market_data_handler/src/server/: client_manager.cpp  client_manager.h  exchange_simulator.cpp  exchange_simulator.h  main_server.cpp  tick_generator.cpp  tick_generator.h
market_data_handler/tests/: test_cache.cpp  test_latency_tracker.cpp  test_parser.cpp  test_protocol.cpp
